objects/MTO_High_Runner__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MTO High Runner</relationshipLabel>
        <relationshipName>MTO_High_Runner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CONTRACT_LEAD_TIME__c</fullName>
        <label>CONTRACT LEAD TIME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSR_Manager__c</fullName>
        <label>CSR &amp; Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUSTOMER_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CUSTOMER Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_CODE__c</fullName>
        <label>Customer CODE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Filename__c</fullName>
        <label>Filename</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPL__c</fullName>
        <label>GPL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_7_Territory_Code__c</fullName>
        <label>Level 7 Territory Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M10__c</fullName>
        <label>M10</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M11__c</fullName>
        <label>M11</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M12__c</fullName>
        <label>M12</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manufact_Site__c</fullName>
        <label>Manufact. Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerText__c</fullName>
        <label>OwnerText</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_line__c</fullName>
        <label>Product line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_number__c</fullName>
        <label>Serial number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TE_Sales_region_DD4__c</fullName>
        <label>TE Sales region DD4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TE_part_number__c</fullName>
        <label>TE part number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRLT__c</fullName>
        <label>TRLT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trade_Site__c</fullName>
        <label>Trade Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WWCORPACCT__c</fullName>
        <description>TE Worldwide Account Number (8 Digit Base)</description>
        <externalId>true</externalId>
        <inlineHelpText>The TE Customer Worldwide Account Number.</inlineHelpText>
        <label>Worldwide Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MTO High Runner</label>
    <nameField>
        <label>MTO High Runner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MTO High Runner</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>